---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 2021-09-30

  Bugfix:
    - Added all variants of "Natural_Evolution_Enemies" to incompatible list.

---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 2021-09-30

  Features:
    - Reworked custom attack group spawning position selection workflow.
    - Reworked custom attack group attack target selection workflow.
    - Added enemy damage modifier.
    - Base/Cold/Explosive/Armoured Biters now supports damage leveling. Good luck.

  Changes:
    - Changed Build style default setting to "Build a town".
    - Removed group_gathering_time_change. Use game default instead

  Bugfix:
    - Fix global erm cache clean up function
    - Fix negative and positive race using opposite coordinates.

---------------------------------------------------------------------------------------------------
Version: 1.7.3
Date: 2021-09-14

  Bugfixes:
    - Fix an incorrect assignment of a cache value

---------------------------------------------------------------------------------------------------
Version: 1.7.2
Date: 2021-09-14

  Bugfixes:
    - Fix a game start up crash when Bio Industry enables.

---------------------------------------------------------------------------------------------------
Version: 1.7.1
Date: 2021-09-03

  Bugfixes:
    - Turn off debug mode.

---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: 2021-09-03

  Features:
    - ---- Dropship Squad ----
    - Can be enable in setting and set its chance to spawn. Default to ON.
    - Flying units squad must be enabled as prerequisite.
    - Each unit cost 150 attack meter points.  Default 3000 points spawns 20 units.
    - ---- END Dropship Squad ----
    - ---- Squad Subtype: Precision Strike ----